--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="sign-up ">
             
             <form action="" id="signup-form" class="signup-form" style="display:non">
-                <h1 class="center heading">Sign-Up</h1>
+                <h1 class="center heading">Create Account</h1>
                 <p class="successmsg">
                     Account Successfully Created (Temporarily) <br> Now go back and Log-in to your account <br> DO NOT RELOAD THE PAGE
                 </p>
@@ -81,7 +81,7 @@
                 <p class="errormsg4">
                     *password doesn't match
                 </p>
-                <button type="submit" id="signup" class="button">  Sign Up</button>
+                <button type="submit" id="signup" class="button">Create Account</button>
                 <p class="other-method-text">Or Sign Up with </p>
                     <div class="other-method-icons">
                         <a href="#" class="icon"><i class="fa fa-google"></i></a>
@@ -102,7 +102,7 @@
             <h5>
                 Don't have an account yet?
             </h5>
-            <button id="switch-to-sign-up" class="button">Sign-Up</button>
+            <button id="switch-to-sign-up" class="button">Create Account</button>
         </div>
         <div class="right-panel register">
             <h5>
