--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <h1 class="center heading">Login</h1>
                         <p> <u>Default:</u>  <br> <b> username:</b> user1 <br> <b>password:</b> password </p>
                         <p class="errormsg">
-                            Either username doesn't exist or password doesn't match
+                            Either username doesn't exist or password doesn't match please try again
                         </p>
                             <div class="box input-field">
                              <!-- <label for="username">Username</label> -->
